--- a/package.json
+++ b/package.json
@@ -6,16 +6,36 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.33.1",
+    "react-redux": "^8.0.2",
+    "react-router": "latest",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-test-renderer": "^18.2.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "latest",
+    "reselect": "^4.1.6",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11",
+    "typescript": "^4.0.5",
+    "@reduxjs/toolkit": "^1.8.1",
+    "classnames-ts": "^1.0.2",
+    "classname": "^0.0.0",
+    "classnames": "^2.3.1",
+    "jest": "^28.1.3",
+    "antd": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-final-form": "^6.5.9"
   }
 }
